[tool.poetry]
name = "mastercard-statement-analysis"
version = "0.1.0"
description = ""
authors = ["yuta-toramoto"]
readme = "README.md"
packages = [{include = "mastercard_statement_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
